# action-merge-checks

./: .gitignore  README.md  action.yml  merge_checks.py  pyproject.toml  setup.cfg  test_merge_checks.py
.github/: renovate.json
.github/workflows/: ci.yml  merge-checks.yml  poetry-update.yml  rebase.yml
.run/: pytest in _.run.xml  tests.run.xml
merge_checks/: commit_checks.py  commit_status_setter.py  runner.py
src/merge_checks/: commit_checks.py  runner.py
tests/: test_commit_checks.py  test_commit_status_setter.py  test_merge_checks_runner.py
