[tool.poetry]
name = "merge-checks"
version = "0.1.0"
description = "GitHub Merge Checks"
authors = ["moneymeets GmbH <service@moneymeets.com>"]

[tool.poetry.scripts]
merge_checks_runner = 'merge_checks.runner:run'

[tool.poetry.dependencies]
python = "~3.12"
PyGithub = "*"

[tool.poetry.dev-dependencies]
pytest = ">=2"
pytest-cov = "*"

ruff = "*"

[tool.coverage.run]
branch = true
source = ["."]
omit = ["tests/*.py"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
