[project]
name = "merge-checks"
version = "0.1.0"
description = "Midnight Commander's GitHub merge checks"
authors = [
    { name = "Yury V. Zaytsev", email = "yury@shurup.com" }
]
license = "MIT"

requires-python = ">=3.12"

dependencies = [
    "PyGithub",
]

[dependency-groups]
dev = [
    "hatch",
    "pytest",
    "pytest-cov",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
merge_checks_runner = "merge_checks.runner:run"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "C4", # flake8-comprehensions
    "COM", # flake8-commas
    "DTZ", # flake8-datetimez
    "E", # pycodestyle Error
    "F", # Pyflakes
    "I", # isort
    "LOG", # flake8-logging
    "PT", # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "Q", # flake8-quotes
    "PYI", # flake8-pyi
    "RSE", # flake8-raise
    "RUF", # ruff-specific rules
    "T10", # flake8-debugger
    "T20", # flake8-print
    "UP", # pyupgrade
    "W", # pycodestyle Warning
]

ignore = [
    "COM812", # comma consistency enforced by formatter
]

fixable = ["ALL"]
unfixable = []

[tool.pytest.ini_options]
addopts = "--cov --cov-fail-under=95"

[tool.coverage.run]
branch = true
source = ["src"]
