[project]
name = "merge-checks"
version = "0.1.0"
description = "GitHub Merge Checks"
authors = [
    { name = "moneymeets GmbH", email = "service@moneymeets.com" },
]
readme = "README.md"
requires-python = "~=3.14.0"

[project.scripts]
merge_checks_runner = 'merge_checks.runner:run'

[tool.poetry.dependencies]
PyGithub = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"

ruff = "*"

[tool.coverage.run]
branch = true
source = ["."]
omit = ["tests/*.py"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
